tests/errors/alloc_attr_disallow.f90
program main
   implicit none
   integer :: a = 34
   integer, allocatable, parameter :: v=1
end program